# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  notes.txt
MyOpenGL/: CMakeLists.txt  post_build.py
MyOpenGL/Shaders/VertexShaders/: VertexWithColors.vert
MyOpenGL/include/: ConfigOpenGL.h  FileReader.h  OpenGLRuntimeError.h  ProgramExamples.h  ShaderProgram.h  SimpleVertexArray.h  Test.h  VertexBufferObject.h
MyOpenGL/src/: ConfigOpenGL.cpp  FileReader.cpp  Main.cpp  OpenGLRuntimeError.cpp  ProgramExamples.cpp  ShaderProgram.cpp  SimpleVertexArray.cpp  VertexBufferObject.cpp
UnitTests/: CMakeLists.txt  post_build.py
UnitTests/src/: ExampleSrcFile.txt  FileReaderTest.cpp  MainUT.cpp
